# In-Place-Test-Time-Training

./: .gitignore  .gitmodules  LICENSE  Makefile  NOTICE  README.md  main.py  pyproject.toml
benchmark/: README.md
benchmark/configs/: benchmark.yaml
benchmark/data_gen/: __init__.py  common.py  multi_needle.py  ruler_runner.py  single_needle.py  variable_tracking.py
benchmark/eval/: __init__.py  factories.py  gemma3_predictors.py  predictor.py  runner.py  scoring.py  test_gemma3_predictors.py
benchmark/scripts/: aggregate.py  evaluate.py  generate.py  plot.py  report.py  smoke_test.py
models/hf_gemma3/: config_gemma3.py  model_gemma3.py  test_gemma3.py
train/: README.md  main.py  test_main.py
