[project]
name = "in-place-test-time-training"
version = "0.1.0"
description = "Implementation of In-Place Test Time Training for Qwen3-0.6B"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.4",
    "einops>=0.8.2",
    "opt-einsum>=3.4.0",
    "packaging>=26.1",
    "setuptools>=81.0.0",
    "torch>=2.11.0",
    "torchdata>=0.11.0",
    "transformers>=5.6.2",
    "wandb>=0.26.1",
    # RULER synthetic data generators (third_party/RULER)
    "wonderwords>=2.2",
    "nltk>=3.9",
    "numpy>=1.26",
    "tqdm>=4.66",
    # Essay haystack download (one-time setup)
    "html2text>=2024.2.26",
    "beautifulsoup4>=4.12",
    # RULER tokenizer wrapper retries via tenacity
    "tenacity>=8.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
